--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
 version: '3'
 services:
   db:
-    image: postgres
+    image: postgres:11.2-alpine
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
   web:
-    image: diveintohacking/docker-compose-rails-6:0.0.4
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    volumes:
-      - .:/app
+    build: .
+    command: /bin/sh
     environment:
-      - BUNDLE_PATH=/app/vendor/bundle
+      WEBPACKER_DEV_SERVER_HOST: "0.0.0.0"
+      RAILS_SERVE_STATIC_FILES: "1"
+      EDITOR: "vim"
+    volumes:
+      - ./apps:/apps
     ports:
       - "3000:3000"
+      - "3035:3035"
     depends_on:
       - db
-    stdin_open: true
     tty: true
