--- a/apps/ramen_app/Gemfile
+++ b/apps/ramen_app/Gemfile
@@ -4,7 +4,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "2.6.4"
 
 gem "rails", "~> 6.0.3", ">= 6.0.3.2"
-#gem "sqlite3"
+gem 'sqlite3', group: :development
 gem "puma", "~> 3.11"
 gem "sass-rails", ">= 6"
 gem "webpacker", "~> 4.0"
